0.12.1
	+ Use prototype and scriptaculous packages instead of ship them
0.12
	+ Added .field_help class in public.css
	+ Add field help to modelView.mas
	+ Stripe tables in hang table
	+ Use again the loading gif when switching tabs
	+ Add completedAjaxRequest and startAjaxRequest to be used as helpers
	  for automated testing with ANSTE
	+ Fix port validation with "<=" 65535
	+ Display 24 as default value in `IPNetwork` default setter
	+ Comment out some debug
	+ Bugfix. Create redirection URLs using client headers and guessing checking
	  the protocol (HTTP or HTTPS)
	+ Add spinner gif to modalbox window
	+ Assure that a dbus-daemon is running every time a new eBox
	session is started because gconfd requirement
	+ Make EBox::Config::configKeyFromFile non-greedy to parse values properly
0.11.102
	+ Added `override_user_modification` configuration parameter to
	avoid user modification checkings and override them without asking
	+ Use the new EBox::Model::Row api
0.11.101
	+ Bugfix: Minor bugfix when checking uniqueness in Select type
	+ Added Japanese translation
0.11.100
	+ Add groups() to set groups eBox belongs to: ebox, adm, lp...
	+ Use eBox tmp directory to create std* files
	+ Fix an annoying warning found when interpoling undef values
	+ Fix an annoying warning found when interpoling undef values
0.11.99
	+ Fix rendering bug in hasMany viewer closing an open tag
	+ Added `EBox::ColourRange` to handle colour ranges
	+ Enhanced look&feel on model viewers
0.11
	+ New release
0.10.99
	+ New upstream release
0.10
	+ Changes on generic table: css, pager, icons
0.9.100
	+ Improvements on ajax table
	+ Add table page
	+ Add table filter
	+ Added generic ajax form
	+ Add SOAP session file
	+ Add EBox::Event class to support events in eBox
	+ Upgrade to PrototypeJS 1.5.1.1
0.9.99
	+ Enhanced HTML mason templates
0.9.3
	+ New release
0.9.2
	+ New upload method
0.9.1
	+ Add JS functions to show/hide elements
0.9